tests/miniJava/neg/004459_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( else java ) { return 0 ; } }
